# Run_for_emeralds

./: CMakeLists.txt  README.md  main.cpp
include/: Confuse_Trap.cpp  Confuse_Trap.hpp  Fake_Trap.cpp  Fake_trap.hpp  Game_Graphic.cpp  Game_Graphic.hpp  Game_Logic.cpp  Game_Logic.hpp  Main_Menu.cpp  Main_Menu.hpp  Player.cpp  Player.hpp  Stone.cpp  Stone.hpp  Tar_Trap.cpp  Tar_Trap.hpp  Teleport_Trap.cpp  Teleport_Trap.hpp  Trap.cpp  Trap.hpp
